Fixed menu wrapping on smaller devices.

--- a/css/global.css
+++ b/css/global.css
@@ -4245,6 +4245,16 @@ ul.tags {
 div.nav-container {
   background: rgba(255, 255, 255, 0.85); }
 
+.site-header {
+  max-width: none; }
+
+@media only screen and (min-width: 960px) {
+  nav .menu-item a {
+    color: #333;
+    font-size: 14px;
+    padding: 20px 6px;
+    font-weight: 600; } }
+
 .toggled-on nav {
   padding-top: 50px; }
 
